force-app/main/default/objects/AZ_Claim__x/AZ_Claim__x.object-meta.xml
<CustomObject>
    <externalDataSource>CS_Azure_Test</externalDataSource>
    <externalName>Claims</externalName>
    <label>AZ Claim</label>
    <pluralLabel>AZ Claims</pluralLabel>
</CustomObject>