force-app/main/default/objects/AZ_Claim__x/fields/CLAIM_AMOUNT_INCURRED__c.field-meta.xml
<CustomField>
    <fullName>CLAIM_AMOUNT_INCURRED__c</fullName>
    <label>CLAIM_AMOUNT_INCURRED</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>