force-app/main/default/objects/AZ_Claim__x/fields/CLAIM_LNAME__c.field-meta.xml
<CustomField>
    <fullName>CLAIM_LNAME__c</fullName>
    <label>CLAIM_LNAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>