force-app/main/default/objects/AZ_Claim__x/fields/CLAIM_LOCATION_ID__c.field-meta.xml
<CustomField>
    <fullName>CLAIM_LOCATION_ID__c</fullName>
    <externalDeveloperName>CLAIM_LOCATION_ID</externalDeveloperName>
    <label>CLAIM_LOCATION_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>