force-app/main/default/objects/AZ_Claim__x/fields/CLAIM_LOCATION_NAME__c.field-meta.xml
<CustomField>
    <fullName>CLAIM_LOCATION_NAME__c</fullName>
    <label>CLAIM_LOCATION_NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>