force-app/main/default/objects/AZ_Claim__x/fields/CLAIM_STATUS__c.field-meta.xml
<CustomField>
    <fullName>CLAIM_STATUS__c</fullName>
    <label>CLAIM_STATUS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>