force-app/main/default/objects/AZ_Claim__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>DisplayUrl</columns>
    <columns>ExternalId</columns>
    <columns>CLAIM_AMOUNT_INCURRED__c</columns>
    <columns>CLAIM_LNAME__c</columns>
    <columns>CLAIM_LOCATION_ID__c</columns>
    <columns>CLAIM_LOCATION_NAME__c</columns>
    <columns>CLAIM_STATUS__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>